examples/test/testpolicy1564.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1564
  namespace: namespace201
spec:
  podSelector:
    matchLabels:
      key37: value11
      key11: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value1
          key6: value28
          key28: value19
      podSelector:
        matchLabels:
          key24: value32
          key44: value16
